// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image gracefully handles bad high-res url 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "aspectRatio": undefined,
      "backgroundColor": "#EDEDED",
      "borderRadius": 0,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={0}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": "100%",
        },
        Object {
          "borderRadius": 0,
          "resizeMode": "center",
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`Image handles no uri 1`] = `null`;

exports[`Image loads high-res 1`] = `
<View
  style={
    Object {
      "aspectRatio": undefined,
      "backgroundColor": "#EDEDED",
      "borderRadius": 0,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    borderRadius={0}
    fadeDuration={0}
    onLoadEnd={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "resizeMode": "center",
        "width": 500,
      }
    }
  />
  <Image
    fadeDuration={0}
    onError={[Function]}
    onLoadEnd={[Function]}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=1&rel_height=1&rel_vertical_offset=0&rel_horizontal_offset=0&offline=true&resize=1024",
      }
    }
    style={
      Object {
        "aspectRatio": undefined,
        "borderRadius": 0,
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Image renders 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "aspectRatio": undefined,
      "backgroundColor": "#EDEDED",
      "borderRadius": 0,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={0}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": "100%",
        },
        Object {
          "borderRadius": 0,
          "resizeMode": "center",
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`Image respects resizeMode 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "aspectRatio": undefined,
      "backgroundColor": "#EDEDED",
      "borderRadius": 0,
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={0}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": "100%",
        },
        Object {
          "borderRadius": 0,
          "resizeMode": "center",
          "width": "100%",
        },
      ]
    }
  />
</View>
`;
